--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ description = "TUI git network graph viewer — replaces GitHub's Network tab"
 
 [dependencies]
 ratatui = "0.29"
-crossterm = "0.28"
+crossterm = { version = "0.28", features = ["event-stream"] }
+futures = "0.3"
 git2 = "0.20"
 octocrab = "0.44"
 tokio = { version = "1", features = ["full"] }
