--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "arachne"
 version = "0.1.0"
 edition = "2021"
 description = "TUI git network graph viewer — replaces GitHub's Network tab"
+license = "MIT"
+repository = "https://github.com/walteraandrade/arachne"
 
 [dependencies]
 ratatui = "0.29"
