--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ thiserror = "2"
 itertools = "0.14"
 chrono = { version = "0.4", features = ["serde"] }
 unicode-width = "0.2"
+libc = "0.2"
+base64 = "0.22"
+tiny-skia = "0.11"
 
 [dev-dependencies]
 tempfile = "3"
